--- a/app/src/main/res/layout/fragment_settings_copyright.xml
+++ b/app/src/main/res/layout/fragment_settings_copyright.xml
@@ -1,14 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/settings_relativeLayout_copyright"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".view.SettingsCopyrightFragment">
+    android:orientation="vertical">
 
-    <!-- TODO: Update blank fragment layout -->
     <TextView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:text="Copyright" />
 
-</FrameLayout>
+</RelativeLayout>
