--- a/app/src/main/res/layout/fragment_settings_support.xml
+++ b/app/src/main/res/layout/fragment_settings_support.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/settings_relativeLayout_support"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:id="@+id/settings_relativeLayout_feedback"
     android:orientation="vertical">
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="Feedback" />
+        android:text="Support" />
 
 </RelativeLayout>
