--- a/app/src/main/res/layout/activity_calendar.xml
+++ b/app/src/main/res/layout/activity_calendar.xml
@@ -8,19 +8,19 @@
 
     <com.github.sundeepk.compactcalendarview.CompactCalendarView xmlns:app="http://schemas.android.com/apk/res-auto"
         android:id="@+id/calendarCvCalendar"
-        android:layout_width="wrap_content"
-        android:layout_height="250dp"
+        android:layout_width="373dp"
+        android:layout_height="246dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="28dp"
+        android:layout_marginTop="40dp"
         android:paddingLeft="10dp"
         android:paddingRight="10dp"
-        app:compactCalendarBackgroundColor="#ffe95451"
-        app:compactCalendarCurrentDayBackgroundColor="#B71C1C"
-        app:compactCalendarCurrentSelectedDayBackgroundColor="#E57373"
+        app:compactCalendarBackgroundColor="@color/ic_launcher_background"
+        app:compactCalendarCurrentDayBackgroundColor="@color/grey3"
+        app:compactCalendarCurrentSelectedDayBackgroundColor="@color/green1"
         app:compactCalendarMultiEventIndicatorColor="#fff"
         app:compactCalendarTargetHeight="250dp"
-        app:compactCalendarTextColor="#fff"
+        app:compactCalendarTextColor="@color/grey3"
         app:compactCalendarTextSize="12sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -32,7 +32,10 @@
         android:layout_height="26dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="28dp"
+        android:layout_marginTop="12dp"
+        android:lines="@android:integer/config_longAnimTime"
+        android:textSize="18sp"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -40,21 +43,22 @@
 
     <TextView
         android:id="@+id/calendarTvMonth"
-        android:layout_width="0dp"
-        android:layout_height="25dp"
+        android:layout_width="378dp"
+        android:layout_height="40dp"
         android:autoText="false"
-        android:background="#ffe95451"
-        android:backgroundTint="#ffe95451"
+        android:background="@color/green1"
         android:backgroundTintMode="src_atop"
         android:clickable="true"
+        android:paddingTop="8dp"
         android:text="TextView"
+        android:textAlignment="center"
+        android:textColor="@color/ic_launcher_background"
+        android:textSize="18sp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/calendarCvCalendar"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="1.0"
-        tools:background="#ffe95451" />
+        app:layout_constraintVertical_bias="0.0" />
 
     <ListView
         android:id="@+id/calendarLvList"
