--- a/app/src/main/res/layout/activity_tab.xml
+++ b/app/src/main/res/layout/activity_tab.xml
@@ -12,6 +12,7 @@
         android:id="@+id/appBarLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="#900a0b0a"
         android:paddingTop="@dimen/appbar_padding_top"
         android:theme="@style/AppTheme.AppBarOverlay">
 
@@ -19,24 +20,28 @@
             android:id="@+id/tabBarLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:visibility="visible">
+            android:visibility="visible"
+            app:tabIndicatorColor="@color/green1">
 
             <android.support.design.widget.TabItem
                 android:id="@+id/newEventTab"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:icon="@drawable/ic_dateview"
                 android:text="@string/newEventTabText" />
 
             <android.support.design.widget.TabItem
                 android:id="@+id/calendarTab"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:icon="@drawable/ic_calendarview"
                 android:text="@string/calendarTabText" />
 
             <android.support.design.widget.TabItem
                 android:id="@+id/settingTab"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:icon="@drawable/ic_settings"
                 android:text="@string/settingTabText" />
 
         </android.support.design.widget.TabLayout>
@@ -54,6 +59,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="end|bottom"
         android:layout_margin="@dimen/fab_margin"
-        app:srcCompat="@android:drawable/ic_dialog_email" />
+        app:backgroundTint="@color/green1"
+        app:srcCompat="@drawable/ic_plusmenu" />
 
 </android.support.design.widget.CoordinatorLayout>
