--- a/app/src/main/res/layout/activity_calendar.xml
+++ b/app/src/main/res/layout/activity_calendar.xml
@@ -15,9 +15,9 @@
         android:layout_marginTop="40dp"
         android:paddingLeft="10dp"
         android:paddingRight="10dp"
-        app:compactCalendarBackgroundColor="@color/ic_launcher_background"
-        app:compactCalendarCurrentDayBackgroundColor="@color/grey3"
-        app:compactCalendarCurrentSelectedDayBackgroundColor="@color/green1"
+        app:compactCalendarBackgroundColor="@color/zentea_lightestgreen"
+        app:compactCalendarCurrentDayBackgroundColor="@color/zentea_darkgreyblue"
+        app:compactCalendarCurrentSelectedDayBackgroundColor="@color/zentea_darkgreen"
         app:compactCalendarMultiEventIndicatorColor="#fff"
         app:compactCalendarTargetHeight="250dp"
         app:compactCalendarTextColor="@color/grey3"
@@ -34,6 +34,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="12dp"
         android:lines="@android:integer/config_longAnimTime"
+        android:textColor="@color/zentea_darkgreyblue"
         android:textSize="18sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
@@ -46,7 +47,7 @@
         android:layout_width="378dp"
         android:layout_height="40dp"
         android:autoText="false"
-        android:background="@color/green1"
+        android:background="@color/zentea_darkgreen"
         android:backgroundTintMode="src_atop"
         android:clickable="true"
         android:paddingTop="8dp"
