--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,9 @@
     <color name="grey2">#53201b1b</color>
     <color name="grey3">#6a201b1b</color>
     <color name="dove">#908dafce</color>
+    <color name="zentea_darkgreen">#95ab63</color>
+    <color name="zentea_darkgreyblue">#10222b</color>
+    <color name="zentea_lightestgreen">#f6ffe0</color>
+    <color name="zentea_green1">#bdd684</color>
+    <color name="zentea_lightgreen">#e2f0d6</color>
 </resources>
