--- a/app/src/main/res/layout/activity_calendar.xml
+++ b/app/src/main/res/layout/activity_calendar.xml
@@ -16,11 +16,11 @@
         android:paddingLeft="10dp"
         android:paddingRight="10dp"
         app:compactCalendarBackgroundColor="@color/zentea_lightestgreen"
-        app:compactCalendarCurrentDayBackgroundColor="@color/zentea_darkgreyblue"
+        app:compactCalendarCurrentDayBackgroundColor="@color/zentea_lightgreen"
         app:compactCalendarCurrentSelectedDayBackgroundColor="@color/zentea_darkgreen"
         app:compactCalendarMultiEventIndicatorColor="#fff"
         app:compactCalendarTargetHeight="250dp"
-        app:compactCalendarTextColor="@color/grey3"
+        app:compactCalendarTextColor="@color/zentea_darkgreyblue"
         app:compactCalendarTextSize="12sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
