--- a/app/src/main/res/layout/fragment_settings_copyright.xml
+++ b/app/src/main/res/layout/fragment_settings_copyright.xml
@@ -3,7 +3,8 @@
     android:id="@+id/settings_relativeLayout_copyright"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:background="?android:windowBackground">
 
     <TextView
         android:layout_width="match_parent"
