--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -19,23 +19,23 @@
             android:layout_height="wrap_content"
             android:layout_alignParentTop="true"
             android:layout_centerHorizontal="true"
-            android:layout_marginTop="20dp"
+            android:layout_marginTop="113dp"
             android:text="@string/settings_text" />
 
         <Button
             android:id="@+id/settings_button_feedback"
             android:layout_width="228dp"
             android:layout_height="wrap_content"
-            android:layout_centerInParent="true"
+            android:layout_alignParentBottom="true"
+            android:layout_centerHorizontal="true"
+            android:layout_marginBottom="180dp"
             android:text="@string/feedback_zur_app_text" />
 
         <Button
             android:id="@+id/settings_button_copyright"
             android:layout_width="228dp"
             android:layout_height="wrap_content"
-            android:layout_alignParentTop="true"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="155dp"
+            android:layout_centerInParent="true"
             android:text="@string/copyright_text" />
 
         <Button
@@ -44,7 +44,7 @@
             android:layout_height="wrap_content"
             android:layout_alignParentTop="true"
             android:layout_centerHorizontal="true"
-            android:layout_marginTop="86dp"
+            android:layout_marginTop="181dp"
             android:text="@string/support_text" />
     </RelativeLayout>
 
