--- a/app/src/main/res/layout/activity_qrgenerator.xml
+++ b/app/src/main/res/layout/activity_qrgenerator.xml
@@ -5,46 +5,67 @@
     android:orientation="vertical">
 
     <RelativeLayout
-        android:id="@+id/qr_main"
+        android:id="@+id/generator_texView_frame"
         android:layout_width="match_parent"
-        android:layout_height="514dp"
+        android:layout_height="347dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true">
 
+
         <ImageView
             android:id="@+id/generator_imageView_qrResult"
-            android:layout_width="match_parent"
-            android:layout_height="354dp"
+            android:layout_width="163dp"
+            android:layout_height="128dp"
             android:layout_alignParentBottom="true"
-            android:layout_alignParentStart="true" />
+            android:layout_alignParentStart="true"
+            android:layout_marginStart="97dp" />
+
+        <TextView
+            android:id="@+id/generator_textView_Headline"
+            android:layout_width="244dp"
+            android:layout_height="46dp"
+            android:layout_alignParentTop="true"
+            android:layout_alignStart="@+id/generator_textView_text_output"
+            android:layout_marginTop="23dp"
+            android:text="@string/headline" />
 
         <TextView
             android:id="@+id/generator_textView_text_output"
-            android:layout_width="331dp"
-            android:layout_height="139dp"
+            android:layout_width="309dp"
+            android:layout_height="111dp"
             android:layout_alignParentTop="true"
             android:layout_centerHorizontal="true"
-            android:layout_marginTop="15dp" />
+            android:layout_marginTop="78dp"
+            android:text="EventText" />
 
     </RelativeLayout>
 
     <RelativeLayout
-        android:id="@+id/generator_temp_button_frame"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true">
+        android:id="@+id/generator_button_frame"
+        android:layout_width="match_parent"
+        android:layout_height="217dp"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentStart="true">
 
 
         <Button
-            android:id="@+id/createQRCode"
+            android:id="@+id/generator_button_start_shareFragment"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            android:layout_alignParentEnd="true"
-            android:layout_marginBottom="66dp"
-            android:layout_marginEnd="32dp"
-            android:text="Create QR Code" />
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"
+            android:layout_marginStart="101dp"
+            android:layout_marginTop="22dp"
+            android:text="@string/qr_code_anzeigen" />
+
+        <Button
+            android:id="@+id/generator_button_show_eventReject"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentStart="true"
+            android:layout_centerVertical="true"
+            android:layout_marginStart="71dp"
+            android:text="@string/r_ckmeldungen_anzeigen" />
 
     </RelativeLayout>
 </RelativeLayout>
