--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -123,7 +123,8 @@
             android:layout_height="wrap_content"
             android:layout_alignBottom="@+id/settings_settings_textView_allowPush"
             android:layout_alignParentEnd="true"
-            android:layout_marginEnd="62dp" />
+            android:layout_marginEnd="62dp"
+            android:checked="false" />
 
         <Spinner
             android:id="@+id/settings_settings_spinner_minutes"
