--- a/app/src/main/res/layout/activity_new_event.xml
+++ b/app/src/main/res/layout/activity_new_event.xml
@@ -6,19 +6,20 @@
     android:layout_height="match_parent"
     android:background="?android:windowBackground">
 
-
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/newEvent_newFragment"
-        android:visibility="visible"></RelativeLayout>
+        android:visibility="gone"></RelativeLayout>
 
     <RelativeLayout
         android:id="@+id/newEvent_oldFragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true">
+        android:layout_alignParentTop="true"
+        android:scrollbarStyle="insideOverlay"
+        android:scrollbars="vertical">
 
         <TextView
             android:id="@+id/newEventTab"
@@ -84,7 +85,7 @@
 
             android:layout_alignParentEnd="true"
             android:layout_alignParentTop="true"
-            android:layout_marginTop="199dp"
+            android:layout_marginTop="204dp"
             android:ems="10" />
 
 
@@ -109,9 +110,8 @@
 
             android:layout_height="wrap_content"
 
-            android:layout_alignParentBottom="true"
             android:layout_alignParentEnd="true"
-            android:layout_marginBottom="212dp"
+            android:layout_centerVertical="true"
             android:ems="10"
             android:focusable="true" />
 
@@ -136,8 +136,9 @@
             android:layout_width="wrap_content"
 
             android:layout_height="wrap_content"
-            android:layout_above="@+id/newEvent_checkBox_SerialEvent"
+            android:layout_alignParentBottom="true"
             android:layout_alignParentEnd="true"
+            android:layout_marginBottom="196dp"
             android:ems="10"
             android:focusable="true" />
 
@@ -150,9 +151,9 @@
 
             android:layout_height="wrap_content"
 
-            android:layout_alignParentBottom="true"
             android:layout_alignParentStart="true"
-            android:layout_marginBottom="125dp"
+            android:layout_below="@+id/newEvent_textEdit_endTime"
+            android:layout_marginTop="-176dp"
             android:checked="false"
             android:text="@string/event_serialEvent" />
 
@@ -165,11 +166,10 @@
 
             android:layout_height="wrap_content"
 
-            android:layout_alignStart="@+id/newEvent_editText_description"
-            android:layout_below="@+id/newEvent_checkBox_SerialEvent"
-            android:layout_marginTop="-125dp"
+            android:layout_alignBottom="@+id/newEvent_textView_repetition"
+            android:layout_alignParentEnd="true"
             android:entries="@string/event_repetition"
-            android:visibility="visible" />
+            android:visibility="gone" />
 
 
         <TextView
@@ -180,11 +180,11 @@
 
             android:layout_height="wrap_content"
 
+            android:layout_alignParentBottom="true"
             android:layout_alignParentStart="true"
-            android:layout_below="@+id/newEvent_checkBox_SerialEvent"
-            android:layout_marginTop="-125dp"
+            android:layout_marginBottom="117dp"
             android:text="@string/event_repetition"
-            android:visibility="visible" />
+            android:visibility="gone" />
 
 
         <TextView
@@ -198,7 +198,7 @@
             android:layout_alignBaseline="@+id/newEvent_textEdit_endOfRepetition"
             android:layout_alignParentStart="true"
             android:text="@string/event_endOfRepetition"
-            android:visibility="visible" />
+            android:visibility="gone" />
 
 
         <EditText
@@ -209,11 +209,12 @@
 
             android:layout_height="wrap_content"
 
+            android:layout_alignParentBottom="true"
             android:layout_alignParentEnd="true"
-            android:layout_below="@+id/newEvent_spinner_repetition"
+            android:layout_marginBottom="36dp"
             android:ems="10"
             android:focusable="true"
-            android:visibility="visible" />
+            android:visibility="gone" />
 
 
         <Button
