--- a/app/src/main/res/layout/activity_tab.xml
+++ b/app/src/main/res/layout/activity_tab.xml
@@ -1,15 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main_content"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:fitsSystemWindows="true">
+    android:fitsSystemWindows="true"
+    tools:context=".TabActivity">
 
     <android.support.design.widget.AppBarLayout
         android:id="@+id/appBarLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="@color/zentea_darkgreyblue"
         android:paddingTop="@dimen/appbar_padding_top"
         android:theme="@style/AppTheme.AppBarOverlay">
 
@@ -17,24 +20,33 @@
             android:id="@+id/tabBarLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:visibility="visible">
+            android:background="@android:color/background_dark"
+            android:visibility="visible"
+            app:tabGravity="fill"
+            app:tabIndicatorColor="@android:color/darker_gray"
+            app:tabMaxWidth="0dp"
+            app:tabMode="fixed">
 
             <android.support.design.widget.TabItem
                 android:id="@+id/newEventTab"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+
+                android:icon="@drawable/ic_android_black2_24dp"
                 android:text="@string/newEventTabText" />
 
             <android.support.design.widget.TabItem
                 android:id="@+id/calendarTab"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:icon="@drawable/ic_android_black3_24dp"
                 android:text="@string/calendarTabText" />
 
             <android.support.design.widget.TabItem
                 android:id="@+id/settingTab"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:icon="@mipmap/ic_launcher"
                 android:text="@string/settingTabText" />
 
         </android.support.design.widget.TabLayout>
@@ -43,20 +55,23 @@
     <android.support.v4.view.ViewPager
         android:id="@+id/container"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior" />
+        android:layout_height="match_parent" />
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/newEventFloatButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="end|bottom"
+        android:layout_width="460dp"
+        android:layout_height="49dp"
         android:layout_margin="@dimen/fab_margin"
-        app:srcCompat="@android:drawable/ic_dialog_email" />
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        app:backgroundTint="@color/zentea_darkgreen"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.924"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.946" />
 
-    <FrameLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:id="@+id/fragment_container" />
-
-</android.support.design.widget.CoordinatorLayout>
+</android.support.constraint.ConstraintLayout>
