US007: FloatingActionButton added hidden Fieled to save boolean if Menu is already open and check if or not

--- a/app/src/main/res/layout/activity_calendar.xml
+++ b/app/src/main/res/layout/activity_calendar.xml
@@ -89,7 +89,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.997"
-        app:srcCompat="@android:drawable/ic_dialog_dialer" />
+        app:srcCompat="@drawable/ic_android_black2_24dp" />
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/calendar_floatingActionButtonNewEvent"
@@ -104,7 +104,7 @@
         app:srcCompat="@android:drawable/ic_menu_today" />
 
     <android.support.design.widget.FloatingActionButton
-        android:id="@+id/calender_floatingActionButtonScan"
+        android:id="@+id/calendar_floatingActionButtonScan"
         android:layout_width="40dp"
         android:layout_height="40dp"
         android:layout_gravity="bottom|end"
@@ -120,5 +120,18 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:visibility="gone" />
+
+    <TextView
+        android:id="@+id/calendar_hiddenField"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:text="false"
+        android:visibility="invisible"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 </android.support.constraint.ConstraintLayout>
